--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "babel-loader": "^5.0.0",
     "babel-plugin-object-assign": "^1.2.1",
     "bootstrap": "^3.3.5",
+    "browser-filesaver": "^1.1.1",
     "css-loader": "^0.9.1",
     "del": "^1.1.1",
     "file-loader": "^0.8.1",
     "gulp": "^3.8.11",
     "gulp-util": "^3.0.4",
     "json-loader": "^0.5.1",
+    "less": "^2.6.1",
     "less-loader": "^2.2.0",
     "minimist": "^1.1.1",
     "opencpq": "0.1.2",
     "path": "^0.11.14",
     "react": "^0.13.3",
+    "react-bootstrap": "^0.20.3",
+    "react-widgets": "^2.8.2",
     "style-loader": "^0.9.0",
     "url-loader": "^0.5.5",
     "vinyl-ftp": "^0.4.0",
